# EduAI-Tutor

./: .gitignore  README.md  custom_old.css  manage.py  middleware.py  pyproject.toml  test-agent.ipynb  test.html  test_pedagogue.py  test_researcher.py
KodaTheme/project/: index.html  tailwind.config.js
KodaTheme/project/src/: App.tsx
KodaTheme/project/src/types/: index.ts
apps/agents/: agent_coach.py  agent_orchestrator.py  agent_pedagogue.py  agent_researcher.py  agent_watcher.py  course_generator.py  orchestrator.py  prompts.py  utils.py
apps/agents/prompts/: coach.txt  pedagogue.txt  researcher.txt
apps/agents/tools/: llm_loader.py
apps/chat/: urls.py  views.py
apps/chat/templates/chat/: chat.html
apps/core/: urls.py  views.py
apps/core/templates/components/: sidebar.html  statusbar.html  tabbar.html
apps/core/templates/core/: base.html
apps/courses/: models.py  urls.py  views.py
apps/courses/data/: program_topics.py
apps/courses/templates/courses/: course_content.html  course_detail.html  generate.html  my_courses.html
apps/exercises/: admin.py  models.py  security.py  urls.py  views.py
apps/exercises/templates/exercises/: exercise_detail.html  exercise_list.html  user_progress.html
apps/quiz/: consumers.py  models.py  routing.py  urls.py  views.py
apps/quiz/templates/quiz/: create_room.html  join_room.html  multiplayer_game.html  quiz_lobby.html  quiz_start.html  room_detail.html
apps/rag/: module_index_map.py  module_loader.py  splitter.py  utils.py
apps/rag/scripts/: prepare_chroma.py
apps/revision/: urls.py  views.py
apps/revision/templates/revision/: flashcards.html
apps/tracker/: urls.py  views.py
apps/users/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
eduai_project/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: custom.css
static/js/: app.js  navigation.js
templates/: base.html  test-simple.html  test.html
templates/components/: sidebar.html  statusbar.html  tabbar.html  xp_notification.html
theme/: tailwind.config.js
theme/static_src/: tailwind.config.js
theme/static_src/src/: styles.css
theme/templates/: base.html
(+12 files in other folders)
