[project]
name = "eduai-tutor"
version = "0.1.0"
description = ""
authors = [
    { name = "Dorothée Catry", email = "catrydorothee@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"  # ✅ Limite haute pour django-tailwind

dependencies = [
    "django >=5.2.4,<6.0.0",
    "djangorestframework >=3.16.0,<4.0.0",
    "django-tailwind[reload] (>=4.0.1,<5.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "chromadb (>=1.0.15,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
